--- a/VismaProject/src/Page.css
+++ b/VismaProject/src/Page.css
@@ -11,36 +11,32 @@
 }
 
 /* Control the left side */
-.left {
+.leftside {
     position: center;
 }
-.blank {
-
-    height: 20px;
-}
-
-.picture {
-    margin-left: 20%;
-    margin-right: 20%;
 
 
-}
-.newimg {
+.newImage {
      width: 200px;
      height: 200px;
 
  }
 
-.img2 {
+.enlargedImage {
+
     max-width: 100%;
-    max-height: 100%;
+    height: auto;
+    object-fit: contain;
+
 
 }
 
 /* Control the right side */
-.right {
+.rightside {
     height: 100%;
     width: 75%;
     right: 0;
     background-color: grey;
+    overflow: hidden;
 }
+
